--- a/0.10/Dockerfile
+++ b/0.10/Dockerfile
@@ -10,9 +10,9 @@ EXPOSE 8091
 RUN apt-get update && \
     apt-get install -y wget
 
-RUN wget https://s3.amazonaws.com/influxdb/influxdb_nightly_amd64.deb && \
-    sudo dpkg -i influxdb_nightly_amd64.deb && \
-    rm /influxdb_nightly_amd64.deb 
+RUN wget https://s3.amazonaws.com/influxdb/influxdb_0.10.1-1_amd64.deb && \
+    sudo dpkg -i influxdb_0.10.1-1_amd64.deb && \
+    rm /influxdb_0.10.1-1_amd64.deb
 
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
