--- a/0.10/Dockerfile
+++ b/0.10/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && \
     apt-get install -y wget
 
 RUN wget https://s3.amazonaws.com/influxdb/influxdb_0.10.1-1_amd64.deb && \
-    sudo dpkg -i influxdb_0.10.1-1_amd64.deb && \
+    dpkg -i influxdb_0.10.1-1_amd64.deb && \
     rm /influxdb_0.10.1-1_amd64.deb
 
 COPY entrypoint.sh /entrypoint.sh
