--- a/0.10/Dockerfile
+++ b/0.10/Dockerfile
@@ -1,18 +1,16 @@
-FROM ubuntu:14.04
+FROM debian:jessie
 
-ENV INFLUXDB_VERSION 0.10
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+    ca-certificates apt-transport-https
 
-EXPOSE 8083
-EXPOSE 8086
-EXPOSE 8088
-EXPOSE 8091
+RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys 684A14CF2582E0C5 && \
+    echo "deb https://repos.influxdata.com/debian jessie stable" > /etc/apt/sources.list.d/influxdata.list && \
+    apt-get update 
 
-RUN apt-get update && \
-    apt-get install -y wget
+RUN apt-get install influxdb
 
-RUN wget https://s3.amazonaws.com/influxdb/influxdb_0.10.1-1_amd64.deb && \
-    dpkg -i influxdb_0.10.1-1_amd64.deb && \
-    rm /influxdb_0.10.1-1_amd64.deb
+EXPOSE 8083 8086 8088 8091
 
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
