--- a/0.10/Dockerfile
+++ b/0.10/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys 684A14CF2582E
     echo "deb https://repos.influxdata.com/debian jessie stable" > /etc/apt/sources.list.d/influxdata.list && \
     apt-get update 
 
-RUN apt-get install influxdb
+ENV INFLUXDB_VERSION 0.10.3-1
+RUN apt-get install -y influxdb=$INFLUXDB_VERSION
 
 EXPOSE 8083 8086 8088 8091
 
